# VKR

./: .gitignore  README.md  presets.yaml  pyproject.toml  pytest.toml  ruff.toml  ty.toml  uv.toml
.github/workflows/: ci.yaml
src/onec_gen/: builder.py  cli.py  consts.py  detect.py  generator.py  loader.py  naming.py  presets.py  renderer.py  select.py  template_context.py  validation.py
src/onec_gen/exceptions/: __init__.py  base.py  errors.py
src/onec_gen/models/: __init__.py  accumulation_register_spec.py  catalog_spec.py  config_spec.py  document_spec.py  field_spec.py  project_spec.py  role_spec.py  subsystem_spec.py  tabular_section_spec.py  value_type_spec.py
src/onec_gen/schemas/: __init__.py  schema.json  schema.py
src/onec_gen/templates/base/: ConfigDumpInfo.xml  Configuration.xml
src/onec_gen/templates/base/Languages/: Русский.xml
src/onec_gen/templates/jinja/: _macros.xml.j2  accumulation_register.xml.j2  catalog.xml.j2  configuration.xml.j2  document.xml.j2  role.xml.j2  role_rights.xml.j2  subsystem.xml.j2
tests/: conftest.py  test_builder.py  test_cli.py  test_detect.py  test_generator.py  test_loader_and_naming.py  test_presets.py
tests/manifests/: config_valid.json  presets_invalid.yaml  presets_malformed.yaml  presets_valid.yaml
