[build-system]
requires = ["uv_build == 0.11.7"]
build-backend = "uv_build"

[project]
name = "onec-gen"
version = "0.0.0"
requires-python = ">=3.13"
description = "Платформа автоматической генерации конфигураций 1С наоснове бизнес-требований (Low-code DSL + шаблоны)"
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
dependencies = [
    "adaptix == 3.0.0b12",
    "uuid7-rs == 0.0.1",
    "jinja2 == 3.1.6",
    "jsonschema-rs == 0.46.2",
    "orjson == 3.11.8",
    "questionary == 2.1.1",
    "yaml-rs == 0.1.0",
]

[dependency-groups]
zizmor = ["zizmor == 1.24.1"]
lint = [
    "ty == 0.0.32",
    "ruff == 0.15.12",
]
tests = [
    "hypothesis == 6.152.2",
    "pytest == 9.0.3",
    "pytest-cov == 7.1.0",
    "pytest-mock == 3.15.1",
]
ci = [
    { include-group = "lint" },
    { include-group = "tests" },
]
dev = [
    { include-group = "ci" },
]

[project.scripts]
1c-gen-cli = "onec_gen.cli:main"
